        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

4.6.1 to 4.7: (mmm dd, 2015)

  * Changed 'hidecursor' commandline argument (and associated UI item) to
    'cursor'.  The new argument allows to set mouse cursor visibility
    separately for both UI and emulation modes.

  * Fixed memory leak; the game console wasn't being closed after exiting
    a ROM.

  * Updated included PNG library to latest stable version.

-Have fun!


4.6 to 4.6.1: (April 22, 2015)

  * Fixed bug whereby text input could not be entered in certain widgets
    in the debugger.

  * Updated UNIX configure script to work with GCC 5.x compilers.


4.5 to 4.6: (March 21, 2015)

  * Finally fixed fullscreen rendering issues on some OpenGL
    implementations in Linux (mostly Intel-specific).  Basically, the
    concept of 'dirty updates' has been removed; the window is now
    updated continuously.  This may also fix issues some people were
    having with triple-buffering in Windows Direct3D, etc.

  * Fixed sound corruption that happened when running a ROM for the
    first time.  This was most obvious under OSX, but occasionally
    happened on other systems too.

  * Reverted some minor C++11 features (std::regex and cbegin/cend
    iterators) in a few places, since otherwise GCC 4.9 is required to
    compile Stella, and it isn't available on many systems yet.  These
    changes allow Stella to be built with GCC 4.8, which is present in
    the latest 'long term release' of Ubuntu.

  * Fixed error messages on state loading; sometimes multiple messages
    were being added together and displayed.

  * Fixed bug when running ROMs using AtariVox controllers; the app would